# foundry-platform-python

./: .excavator.yml  .gitignore  Makefile  README.md  config.json  openapi.yml  pyproject.toml  tox.ini
.circleci/: config.yml
docs/: AbortTransactionPermissionDenied.md  AbortTransactionPermissionDeniedParameters.md  ActionContainsDuplicateEdits.md  ActionEditedPropertiesNotFound.md  ActionNotFound.md  ActionNotFoundParameters.md  ActionParameterArrayType.md  ActionParameterObjectNotFound.md  ActionParameterObjectNotFoundParameters.md  ActionParameterObjectTypeNotFound.md  ActionParameterType.md  ActionParameterV2.md  ActionType.md  ActionTypeNotFound.md  ActionTypeNotFoundParameters.md  ActionTypeV2.md  ActionValidationFailed.md  ActionValidationFailedParameters.md  AggregationGroupCountExceededLimit.md  AggregationGroupCountExceededLimitParameters.md  AnyType.md  ApiFeaturePreviewUsageOnly.md  ApiUsageDenied.md  ApplyActionFailed.md  ApplyActionMode.md  ApplyActionRequestOptions.md  AsyncOperationError.md  AttachmentNotFound.md  AttachmentNotFoundParameters.md  AttachmentSizeExceededLimit.md  AttachmentSizeExceededLimitParameters.md  AttachmentType.md  BinaryType.md  BooleanType.md  Branch.md  BranchAlreadyExists.md  BranchAlreadyExistsParameters.md  BranchNotFound.md  ByteType.md  ColumnTypesNotSupported.md  (+268 more)
foundry/: __init__.py  _versions.py  api_client.py  api_response.py  cli.py  configuration.py  exceptions.py  foundry_client.py  rest.py  versions.py
scripts/: generate_sdk.sh  generate_spec.sh  parse_version.py  set_version.py
test/: test_api_client.py  (+5 more)
(+6722 files in other folders)
