[tool.poetry]
name = "foundry-platform-sdk"
version = "0.0.0"
description = "The official Python library for the Foundry API"
authors = ["Jacob Smith <jacobas@palantir.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/palantir/foundry-platform-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Palantir OpenAPI"]
packages = [{ include = "foundry" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
python-dateutil = "*"
pydantic = "^2.1.0"
typing-extensions = ">=4.7.1"

[tool.black]
line_length = 100

[build-system]
requires = ["setuptools >= 35.0.2", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
