[tool.poetry]
name = "foundry-platform-sdk"
version = "0.0.0"
description = "The official Python library for the Foundry API"
license = "Apache-2.0"
readme = "README.md"
authors = ["Palantir Technologies, Inc."]
repository = "https://github.com/palantir/foundry-platform-python"
keywords = ["Palantir", "Foundry", "SDK", "Client", "API"]
packages = [{ include = "foundry" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
pydantic = "^2.1.0"
typing-extensions = ">=4.7.1"

[tool.poetry.extras]
cli = ["click"]

[tool.black]
line_length = 100

[build-system]
requires = ["setuptools >= 35.0.2", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
foundry = "foundry.cli:cli"
